--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1282,3 +1282,22 @@
   Url = {http://doi.acm.org/10.1145/800230.806987},
   Year = {1982}
 }
+
+@article{Alpern00,
+  author = {Alpern, B. and Attanasio, C. R. and Barton, J. J. and Burke, M. G. and Cheng, P. and Choi, J.-D. and Cocchi, A. and Fink, S. J. and Grove, D. and Hind, M. and Hummel, S. F. and Lieber, D. and Litvinov, V. and Mergen, M. F. and Ngo, T. and Russell, J. R. and Sarkar, V. and Serrano, M. J. and Shepherd, J. C. and Smith, S. E. and Sreedhar, V. C. and Srinivasan, H. and Whaley, J.},
+  title = {{The {Jalape\~{n}o} Virtual Machine}},
+  journal = {IBM Systems Journal},
+  issue_date = {January 2000},
+  volume = {39},
+  number = {1},
+  month = jan,
+  year = {2000},
+  issn = {0018-8670},
+  pages = {211--238},
+  numpages = {28},
+  url = {http://dx.doi.org/10.1147/sj.391.0211},
+  doi = {10.1147/sj.391.0211},
+  acmid = {1011400},
+  publisher = {IBM Corporation},
+  address = {Riverton, NJ, USA}
+}
