--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1301,3 +1301,51 @@
   publisher = {IBM Corporation},
   address = {Riverton, NJ, USA}
 }
+
+@inproceedings{Blackburn06,
+  author = {Blackburn, Stephen M. and Garner, Robin and Hoffmann, Chris and Khang, Asjad M. and McKinley, Kathryn S. and Bentzur, Rotem and Diwan, Amer and Feinberg, Daniel and Frampton, Daniel and Guyer, Samuel Z. and Hirzel, Martin and Hosking, Antony and Jump, Maria and Lee, Han and Moss, J. Eliot B. and Phansalkar, Aashish and Stefanovi\'{c}, Darko and VanDrunen, Thomas and von Dincklage, Daniel and Wiedermann, Ben},
+  title = {{The {DaCapo} Benchmarks: {Java} Benchmarking Development and Analysis}},
+  booktitle = {Proceedings of the 21st Annual ACM SIGPLAN Conference on Object-oriented Programming Systems, Languages, and Applications},
+  series = {OOPSLA '06},
+  year = {2006},
+  isbn = {1-59593-348-4},
+  location = {Portland, Oregon, USA},
+  pages = {169--190},
+  numpages = {22},
+  url = {http://doi.acm.org/10.1145/1167473.1167488},
+  doi = {10.1145/1167473.1167488},
+  acmid = {1167488},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {DaCapo, Java, SPEC, benchmark, methodology}
+}
+
+@inproceedings{Bull99,
+  author = {Bull, J. M. and Smith, L. A. and Westhead, M. D. and Henty, D. S. and Davey, R. A.},
+  title = {{A Methodology for Benchmarking {Java} {Grande} Applications}},
+  booktitle = {Proceedings of the ACM 1999 Conference on Java Grande},
+  series = {JAVA '99},
+  year = {1999},
+  isbn = {1-58113-161-5},
+  location = {San Francisco, California, USA},
+  pages = {81--88},
+  numpages = {8},
+  url = {http://doi.acm.org/10.1145/304065.304103},
+  doi = {10.1145/304065.304103},
+  acmid = {304103},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+
+%% MISC (URLs)
+@misc{perf,
+  author = {{perf: {Linux} profiling with performance counters}},
+  note = {\url{https://perf.wiki.kernel.org/} Accessed: 2016-02-15}  
+}
+
+@misc{PEP,
+  author = {{Jikes RVM Research Archive}},
+  title = {{{PEP}: continuous path and edge profiling}},
+  note = {\url{http://jikesrvm.org/Research+Archive}}
+}
