--- a/header.tex
+++ b/header.tex
@@ -81,6 +81,9 @@
 \newcommand{\ksf}{\mbox{$k$-SF}}
 \newcommand{\kblpp}{\mbox{$k$-BLPP}}
 \newcommand{\blpp}{\mbox{BLPP}}
+\newcommand{\specjvm}{{\tt SPEC JVM2008}}
+\newcommand{\dacapo}{{\tt DaCapo}}
+\newcommand{\javagrande}{{\tt Java Grande}}
 
 % OSRKit
 \newcommand{\osrkit}{{\sf OSRKit}}
