Added more text from the PLDI draft. Algorithm do_passes restyled in algorithm2e format

--- a/osr-correctness.tex
+++ b/osr-correctness.tex
@@ -18,8 +18,8 @@ As we observed in \mysection\ref{ss:osr-llvm-approach}, the OSR practice often m
 
 \input{osr-mapping}
 \input{osr-mapping-correctness}
-\subsubsection{Examples of LVE Transformations}
-\subsubsection{Composing Multiple Transformation Passes}
+\input{osr-lve-examples}
+\input{osr-composition}
 
 \subsection{Multi-Version Programs}
 
