--- a/osr-mapping.tex
+++ b/osr-mapping.tex
@@ -25,6 +25,11 @@ $$
 $$
 \end{lemma}
 
+\begin{myproof}
+\missing
+\end{myproof}
+
+
 \noindent Notice that $dom(\mu_{\pi\pi'})\subseteq [1,|\pi|]$ is the set of all possible points in $\pi$ where OSR transitions to $\pi'$ can be fired. If $\mu_{\pi\pi'}$ is partial, then there are points in $\pi$ where OSR cannot be fired. In Section\missing, we discuss an algorithm whose goal is to minimize the number of these points.
 
 
