Proof for Lemma 1

--- a/header.tex
+++ b/header.tex
@@ -102,7 +102,7 @@
 \newcommand{\trans}{\Rightarrow}
 \newcommand{\mysem}[1]{[\![#1]\!]}
 \newcommand{\lve}{\text{LVE}}
-\newcommand{\live}{\mytt{is\_live}}
+\newcommand{\live}{\mytt{live}}
 \newcommand{\ureachdef}{\mytt{urdef}}
 \newcommand{\dom}{\mytt{dom}}
 \newcommand{\stmt}{\mytt{stmt}}
