--- a/osr-language.tex
+++ b/osr-language.tex
@@ -72,6 +72,7 @@ The {\em state} of a program $\pi=\langle I_1, I_2, \ldots, I_n \rangle$ is desc
 
 
 \begin{definition}[Big-Step Transitions]
+\label{de:transitions}
 %For any program $\pi$, relation $\Rightarrow_{\pi}\subseteq State\times State$ is defined as follows, with meta-variables $\texttt{x}, \texttt{y}\in Var$, $\texttt{e}\in Expr$, and $\texttt{m}\in Num$:
 For any program $\pi$, we define relation $\Rightarrow_{\pi}\:\subseteq State\times State$ as follows, with meta-variables $\texttt{x}, \texttt{y}\in Var$, $\texttt{e}\in Expr$, and $\texttt{m}\in Num$:
 
